test/typeerrors/Heuristics/UnifierFunctionBinding.hs
test True = "hello"
test 3    = "world"
